--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <!--
   ~ Copyright (c) 2011-2019 Contributors to the Eclipse Foundation
   ~
@@ -53,160 +53,32 @@
     <vertx.testNativeTransport>false</vertx.testNativeTransport>
     <vertx.testDomainSockets>false</vertx.testDomainSockets>
     <jar.manifest>${project.basedir}/src/main/resources/META-INF/MANIFEST.MF</jar.manifest>
-  </properties>
+  
+  
+
+  <versions.java-security-toolkit>1.0.0</versions.java-security-toolkit>
+</properties>
 
   <dependencyManagement>
-    <dependencies>
+    
+  
+    <dependencies> 
+      <dependency> 
+        <groupId>io.vertx</groupId>  
+        <artifactId>vertx-dependencies</artifactId>  
+        <version>${stack.version}</version>  
+        <type>pom</type>  
+        <scope>import</scope> 
+      </dependency>  
       <dependency>
-        <groupId>io.vertx</groupId>
-        <artifactId>vertx-dependencies</artifactId>
-        <version>${stack.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
+        <groupId>io.openpixee</groupId>
+        <artifactId>java-security-toolkit</artifactId>
+        <version>${versions.java-security-toolkit}</version>
       </dependency>
     </dependencies>
-  </dependencyManagement>
+ </dependencyManagement>
 
-  <dependencies>
-
-    <!-- We depend on the specific Netty dependencies not netty-all to reduce the size of fatjars -->
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-common</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-buffer</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-transport</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-handler</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-handler-proxy</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-codec-http</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-codec-http2</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-resolver</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-resolver-dns</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-codec-haproxy</artifactId>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-transport-native-epoll</artifactId>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-transport-native-kqueue</artifactId>
-      <optional>true</optional>
-    </dependency>
-
-    <!-- Jackson -->
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.fasterxml.jackson.core</groupId>
-      <artifactId>jackson-databind</artifactId>
-      <optional>true</optional>
-    </dependency>
-
-    <!-- Loggers -->
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-api</artifactId>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-api</artifactId>
-      <optional>true</optional>
-    </dependency>
-
-    <!-- Generators -->
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-codegen</artifactId>
-      <optional>true</optional>
-    </dependency>
-    <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-docgen</artifactId>
-      <optional>true</optional>
-    </dependency>
-
-    <!-- Testing -->
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>${junit.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.directory.server</groupId>
-      <artifactId>apacheds-protocol-dns</artifactId>
-      <version>${apacheds-protocol-dns.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.assertj</groupId>
-      <artifactId>assertj-core</artifactId>
-      <version>${assertj.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>io.netty</groupId>
-      <artifactId>netty-tcnative-boringssl-static</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.aayushatharva.brotli4j</groupId>
-      <artifactId>brotli4j</artifactId>
-      <version>1.8.0</version>
-      <scope>test</scope>
-    </dependency>
-
-    <!-- JMH -->
-    <dependency>
-      <groupId>org.openjdk.jmh</groupId>
-      <artifactId>jmh-core</artifactId>
-      <version>${jmh.version}</version>
-      <scope>test</scope>
-    </dependency>
-
-  </dependencies>
+  
 
   <build>
     <pluginManagement>
@@ -891,4 +763,142 @@
 
   </profiles>
 
+
+  <dependencies> 
+    <!-- We depend on the specific Netty dependencies not netty-all to reduce the size of fatjars -->  
+    <dependency> 
+      <groupId>io.netty</groupId>  
+      <artifactId>netty-common</artifactId> 
+    </dependency>  
+    <dependency> 
+      <groupId>io.netty</groupId>  
+      <artifactId>netty-buffer</artifactId> 
+    </dependency>  
+    <dependency> 
+      <groupId>io.netty</groupId>  
+      <artifactId>netty-transport</artifactId> 
+    </dependency>  
+    <dependency> 
+      <groupId>io.netty</groupId>  
+      <artifactId>netty-handler</artifactId> 
+    </dependency>  
+    <dependency> 
+      <groupId>io.netty</groupId>  
+      <artifactId>netty-handler-proxy</artifactId> 
+    </dependency>  
+    <dependency> 
+      <groupId>io.netty</groupId>  
+      <artifactId>netty-codec-http</artifactId> 
+    </dependency>  
+    <dependency> 
+      <groupId>io.netty</groupId>  
+      <artifactId>netty-codec-http2</artifactId> 
+    </dependency>  
+    <dependency> 
+      <groupId>io.netty</groupId>  
+      <artifactId>netty-resolver</artifactId> 
+    </dependency>  
+    <dependency> 
+      <groupId>io.netty</groupId>  
+      <artifactId>netty-resolver-dns</artifactId> 
+    </dependency>  
+    <dependency> 
+      <groupId>io.netty</groupId>  
+      <artifactId>netty-codec-haproxy</artifactId>  
+      <optional>true</optional> 
+    </dependency>  
+    <dependency> 
+      <groupId>io.netty</groupId>  
+      <artifactId>netty-transport-native-epoll</artifactId>  
+      <optional>true</optional> 
+    </dependency>  
+    <dependency> 
+      <groupId>io.netty</groupId>  
+      <artifactId>netty-transport-native-kqueue</artifactId>  
+      <optional>true</optional> 
+    </dependency>  
+    <!-- Jackson -->  
+    <dependency> 
+      <groupId>com.fasterxml.jackson.core</groupId>  
+      <artifactId>jackson-core</artifactId> 
+    </dependency>  
+    <dependency> 
+      <groupId>com.fasterxml.jackson.core</groupId>  
+      <artifactId>jackson-databind</artifactId>  
+      <optional>true</optional> 
+    </dependency>  
+    <!-- Loggers -->  
+    <dependency> 
+      <groupId>org.apache.logging.log4j</groupId>  
+      <artifactId>log4j-api</artifactId>  
+      <optional>true</optional> 
+    </dependency>  
+    <dependency> 
+      <groupId>org.slf4j</groupId>  
+      <artifactId>slf4j-api</artifactId>  
+      <optional>true</optional> 
+    </dependency>  
+    <!-- Generators -->  
+    <dependency> 
+      <groupId>io.vertx</groupId>  
+      <artifactId>vertx-codegen</artifactId>  
+      <optional>true</optional> 
+    </dependency>  
+    <dependency> 
+      <groupId>io.vertx</groupId>  
+      <artifactId>vertx-docgen</artifactId>  
+      <optional>true</optional> 
+    </dependency>  
+    <!-- Testing -->  
+    <dependency> 
+      <groupId>junit</groupId>  
+      <artifactId>junit</artifactId>  
+      <version>${junit.version}</version>  
+      <scope>test</scope> 
+    </dependency>  
+    <dependency> 
+      <groupId>org.apache.directory.server</groupId>  
+      <artifactId>apacheds-protocol-dns</artifactId>  
+      <version>${apacheds-protocol-dns.version}</version>  
+      <scope>test</scope> 
+    </dependency>  
+    <dependency> 
+      <groupId>org.assertj</groupId>  
+      <artifactId>assertj-core</artifactId>  
+      <version>${assertj.version}</version>  
+      <scope>test</scope> 
+    </dependency>  
+    <dependency> 
+      <groupId>org.slf4j</groupId>  
+      <artifactId>slf4j-simple</artifactId>  
+      <scope>test</scope> 
+    </dependency>  
+    <dependency> 
+      <groupId>org.apache.logging.log4j</groupId>  
+      <artifactId>log4j-core</artifactId>  
+      <scope>test</scope> 
+    </dependency>  
+    <dependency> 
+      <groupId>io.netty</groupId>  
+      <artifactId>netty-tcnative-boringssl-static</artifactId>  
+      <scope>test</scope> 
+    </dependency>  
+    <dependency> 
+      <groupId>com.aayushatharva.brotli4j</groupId>  
+      <artifactId>brotli4j</artifactId>  
+      <version>1.8.0</version>  
+      <scope>test</scope> 
+    </dependency>  
+    <!-- JMH -->  
+    <dependency> 
+      <groupId>org.openjdk.jmh</groupId>  
+      <artifactId>jmh-core</artifactId>  
+      <version>${jmh.version}</version>  
+      <scope>test</scope> 
+    </dependency>  
+    <dependency>
+      <groupId>io.openpixee</groupId>
+      <artifactId>java-security-toolkit</artifactId>
+    </dependency>
+  </dependencies>
 </project>
